NeuroComp/src/compilador/Compilador.java
/* Compilador.java */
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
package compilador;
import java.util.ArrayList;
class Compilador implements CompiladorConstants {

/* Analizador Lexico-Sintactico */

/* FUNCIONES BASE */

/* Funcion que define los tipos de datos aceptados, solo enteros y decimales */
  final public void tipoDato() throws ParseException {
    if (jj_2_1(2)) {
      jj_consume_token(ENTERO);
    } else if (jj_2_2(2)) {
      jj_consume_token(DECIMAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Funcion que define los tipos de valores que se pueden asignar a una variable, 
    solo enteros y decimales */
  final public void tipoValor() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(ENTEROS);
    } else if (jj_2_4(2)) {
      jj_consume_token(DECIMALES);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Funcion que define los tipos de operadores aritmeticos admitidos: +, -, *, / y % */
  final public void operadorAritmetico() throws ParseException {
    if (jj_2_5(2)) {
      jj_consume_token(MAS);
    } else if (jj_2_6(2)) {
      jj_consume_token(MENOS);
    } else if (jj_2_7(2)) {
      jj_consume_token(MULTIPLICACION);
    } else if (jj_2_8(2)) {
      jj_consume_token(DIVISION);
    } else if (jj_2_9(2)) {
      jj_consume_token(MODULO);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Funcion que define los tipos de operadores relacionales admitidos: <, >, =, <=, >= y != */
  final public void operadorRelacional() throws ParseException {
    if (jj_2_10(2)) {
      jj_consume_token(IGUALQUE);
    } else if (jj_2_11(2)) {
      jj_consume_token(DIFERENTEDE);
    } else if (jj_2_12(2)) {
      jj_consume_token(MENORQUE);
    } else if (jj_2_13(2)) {
      jj_consume_token(MAYORQUE);
    } else if (jj_2_14(2)) {
      jj_consume_token(MENORIGUAL);
    } else if (jj_2_15(2)) {
      jj_consume_token(MAYORIGUAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Funcion que define los tipos de operadores logicos admitidos: && y || */
  final public void operadorLogico() throws ParseException {
    if (jj_2_16(2)) {
      jj_consume_token(O);
    } else if (jj_2_17(2)) {
      jj_consume_token(Y);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* OPERACIONES */

/* Funcion que define una una operacion aritmetica en una asginacion: 
    x = y + 3 
    a = 2 * 4 
*/
  final public void operacionAritmetica() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_1;
      }
      operadorAritmetico();
      if (jj_2_19(2)) {
        jj_consume_token(IDENTIFICADOR);
      } else if (jj_2_20(2)) {
        tipoValor();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Funcion que define una operacion relacional: 
    a > 3
    10 <= 20
*/
  final public void operacionRelacional() throws ParseException {
    if (jj_2_21(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_22(2)) {
      tipoValor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    operadorRelacional();
    if (jj_2_23(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_24(2)) {
      tipoValor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Funcion que define una operacion logica
    b > c && 45 == z || 4 != 3
*/
  final public void operacionLogica() throws ParseException {
    operacionRelacional();
    label_2:
    while (true) {
      if (jj_2_25(2)) {
        ;
      } else {
        break label_2;
      }
      operadorLogico();
      operacionRelacional();
    }
  }

/* DECLARACION Y ASIGNACION DE VARIABLES */

/* Funcion que define el como se declara una variable:
    entero x;
    decimal y = 2;
    entero altura = alto;
    entero v = a + b - c * d / e % f;
*/
  final public void declaracionVariable() throws ParseException {
    tipoDato();
    jj_consume_token(IDENTIFICADOR);
    if (jj_2_28(2)) {
      jj_consume_token(IGUAL);
      if (jj_2_26(2)) {
        jj_consume_token(IDENTIFICADOR);
      } else if (jj_2_27(2)) {
        tipoValor();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      operacionAritmetica();
    } else {
      ;
    }
    jj_consume_token(PUNTOCOMA);
  }

/* Funcion que define el como se asigna el valor a una variable
    y = 2;
    altura = alto;
    v = a + b - c * d / e % f;
*/
  final public void asignacionVariable() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    if (jj_2_29(2)) {
      tipoValor();
    } else if (jj_2_30(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    operacionAritmetica();
    jj_consume_token(PUNTOCOMA);
  }

/* ENTRADA Y SALIDA */

/* Funcion que define como se imprime un mensaje por pantalla:
    imprimir : "Hola mundo";
    imprimir : altura;
    imprimir : "Mi edad es: " << edad;
 */
  final public void imprimirMensaje() throws ParseException {
    jj_consume_token(IMPRIMIR);
    jj_consume_token(DOSPUNTOS);
    if (jj_2_31(2)) {
      jj_consume_token(CADENA);
    } else if (jj_2_32(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_3:
    while (true) {
      if (jj_2_33(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(CONCATENACION);
      if (jj_2_34(2)) {
        jj_consume_token(CADENA);
      } else if (jj_2_35(2)) {
        jj_consume_token(IDENTIFICADOR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(PUNTOCOMA);
  }

/* Funcion que define como se lee un dato:
    leer : x;
 */
  final public void leerDato() throws ParseException {
    jj_consume_token(LEER);
    jj_consume_token(DOSPUNTOS);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTOCOMA);
  }

/* ESTRUCTURAS CONDICIONALES */

/* Funcion que define la estructura del condicional si:
    si(x > 3){
        y = 3;
    }
    si(a <= 10){
        b = 0;
    } si no {
        b = 1;
    }
 */
  final public void sentenciaSi() throws ParseException {
    jj_consume_token(SI);
    jj_consume_token(PARENTESISA);
    operacionLogica();
    jj_consume_token(PARENTESISC);
    jj_consume_token(LLAVEA);
    label_4:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_4;
      }
      codigo();
    }
    jj_consume_token(LLAVEC);
    if (jj_2_37(2)) {
      sentenciaSiNo();
    } else {
      ;
    }
  }

/* Funcion que define la estructura de la sentencia si no: 
    si no{
        x = x + 1;
    }
 */
  final public void sentenciaSiNo() throws ParseException {
    jj_consume_token(SINO);
    jj_consume_token(LLAVEA);
    label_5:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_5;
      }
      codigo();
    }
    jj_consume_token(LLAVEC);
  }

/* Funcion que define la estructura del condicional selector:
    selector(opcion){
        opcion 1:
            x = 1;
            romper;
        opcion 2:
            x = 2;
        automatico:
            x = 0;
    } cath (TokenMgrError er){
        errorLexico(er);
        errores++;
    }
*/
  final public void sentenciaSelector() throws ParseException {
    jj_consume_token(SELECTOR);
    jj_consume_token(PARENTESISA);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PARENTESISC);
    jj_consume_token(LLAVEA);
    label_6:
    while (true) {
      if (jj_2_39(2)) {
        ;
      } else {
        break label_6;
      }
      sentenciaSeleccion();
    }
    if (jj_2_40(2)) {
      sentenciaAutomatico();
    } else {
      ;
    }
    jj_consume_token(LLAVEC);
  }

/* Funcion que define la estructura de la sentencia seleccion:
    seleccion 1 :
        imprimir : "Hola";
        romper;
    seleccion 2 :
        imprimir : "Mundo";
*/
  final public void sentenciaSeleccion() throws ParseException {
    jj_consume_token(SELECCION);
    tipoValor();
    jj_consume_token(DOSPUNTOS);
    label_7:
    while (true) {
      if (jj_2_41(2)) {
        ;
      } else {
        break label_7;
      }
      codigo();
    }
    if (jj_2_42(2)) {
      jj_consume_token(ROMPER);
      jj_consume_token(PUNTOCOMA);
    } else {
      ;
    }
  }

/* Funcion de que define la estructura de la sentencia automatico:
    automatico:
        x = y + 5;
        romper;
*/
  final public void sentenciaAutomatico() throws ParseException {
    jj_consume_token(AUTOMATICO);
    jj_consume_token(DOSPUNTOS);
    label_8:
    while (true) {
      if (jj_2_43(2)) {
        ;
      } else {
        break label_8;
      }
      codigo();
    }
    if (jj_2_44(2)) {
      jj_consume_token(ROMPER);
      jj_consume_token(PUNTOCOMA);
    } else {
      ;
    }
  }

/* ESTRUCTURAS CICLICAS */

/* Funcion que define al ciclo mientras:
    mientras(x > b && y < a){
        x = x - 5;
        y = y + 5;
    }
*/
  final public void sentenciaMientras() throws ParseException {
    jj_consume_token(MIENTRAS);
    jj_consume_token(PARENTESISA);
    operacionLogica();
    jj_consume_token(PARENTESISC);
    jj_consume_token(LLAVEA);
    label_9:
    while (true) {
      if (jj_2_45(2)) {
        ;
      } else {
        break label_9;
      }
      codigo();
    }
    jj_consume_token(LLAVEC);
  }

/* Funcion que define la estructura del ciclo para:
    para(entero i = 0; entero < 10; entero = entero + 1){
        imprimir : "El numero es: " << i;
    }
*/
  final public void sentenciaPara() throws ParseException {
    jj_consume_token(PARA);
    jj_consume_token(PARENTESISA);
    condicionalPara();
    jj_consume_token(PARENTESISC);
    jj_consume_token(LLAVEA);
    label_10:
    while (true) {
      if (jj_2_46(2)) {
        ;
      } else {
        break label_10;
      }
      codigo();
    }
    jj_consume_token(LLAVEC);
  }

/* Funcion que define la estructura del la condicion para el ciclo para:
    entero x = 2; x <= 20; x = x + 1
    y = 0.1; y < 1.0; y = y + 0.1 
 */
  final public void condicionalPara() throws ParseException {
    if (jj_2_49(2)) {
      if (jj_2_47(2)) {
        jj_consume_token(ENTERO);
      } else if (jj_2_48(2)) {
        jj_consume_token(DECIMAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    tipoValor();
    jj_consume_token(PUNTOCOMA);
    jj_consume_token(IDENTIFICADOR);
    operadorRelacional();
    if (jj_2_50(2)) {
      tipoValor();
    } else if (jj_2_51(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PUNTOCOMA);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    if (jj_2_52(2)) {
      tipoValor();
    } else if (jj_2_53(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    operacionAritmetica();
  }

/* Funcion que define la estructura del metodo principal: 
    principal{
        entero a = 3;
        entero b = 2;
        entero suma = a + b;
        imprimir : "La suma es: " << suma;
    }
 */
  final public void metodoPrincipal() throws ParseException {
    jj_consume_token(PRINCIPAL);
    jj_consume_token(LLAVEA);
    label_11:
    while (true) {
      if (jj_2_54(2)) {
        ;
      } else {
        break label_11;
      }
      codigo();
    }
    jj_consume_token(LLAVEC);
  }

/* Funcion que manda a llamar a todas las estructuras que posee el lenguaje */
  final public void codigo() throws ParseException {
    if (jj_2_55(2)) {
      declaracionVariable();
    } else if (jj_2_56(2)) {
      asignacionVariable();
    } else if (jj_2_57(2)) {
      imprimirMensaje();
    } else if (jj_2_58(2)) {
      leerDato();
    } else if (jj_2_59(2)) {
      sentenciaSi();
    } else if (jj_2_60(2)) {
      sentenciaSelector();
    } else if (jj_2_61(2)) {
      sentenciaMientras();
    } else if (jj_2_62(2)) {
      sentenciaPara();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }
